# avatar2

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  avatar2-lite.Dockerfile  avatar2.Dockerfile  configure  docker-compose.yml  generate_dockerfile.py  meson.build  qapi-schema.json  setup.py
.github/workflows/: build.yml  build_and_test.yml  build_and_test.yml.disable  continuous_integration.yml  lockdown.yml  publish.yml
avatar2/: __init__.py  avatar2.py  memory_range.py  message.py  watchmen.py
avatar2/archs/: __init__.py  architecture.py  arm.py  mips.py  x86.py
avatar2/installer/: __main__.py  avatar2_installer.py  config.py
avatar2/peripherals/: __init__.py  avatar_peripheral.py  max32_usart.py  nucleo_usart.py  utility_peripherals.py
avatar2/plugins/: assembler.py  gdb.py  (+6 more)
block/: curl.c
docs/: Makefile
gdb-xml/: arm-m-profile.xml
handbook/: 0x01_intro.md  0x02_targets.md  0x03_memory.md  0x04_execution.md  0x05_watchmen.md  0x06_plugins.md
hw/: Kconfig  meson.build
hw/avatar/: Kconfig  Makefile.objs  arm_helper.c  configurable_machine.c  interrupts.c  meson.build  remote_memory.c
qapi/: avatar-target.json  avatar.json  meson.build  qapi-schema.json
softmmu/: cpus.c  physmem.c
targets/: build_panda.sh  build_qemu.sh
tests/: gdb_memory_map_loader.py  hello_world.py  test_avatar-angr.py  test_gdbplugin.py  test_gdbprotocol.py  test_inceptionprotocol.py  test_pypandatarget.py  test_qemutarget.py  test_remote_memoryprotocol.py  test_utils.py
util/: log.c  qemu-thread-posix.c
(+84 files in other folders)
